Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 17090 C++ client library: Implemented request/reply pattern, see xmlBlaster/testsuite/src/c++/TestRequestResponse.cpp

 o 17082 CheckPoint new logging point "publish.enter"

 o r17073 CheckPoint now uses apache-log4j-1.2.15 http://logging.apache.org/log4j/1.2
	  via commons-logging 1.1.1 http://commons.apache.org/logging

 o r17054 MsgErrorHandler: Handles now incoming publish requests as well
          if configured by ConnectQosServer.allowExcpetionsThrownToClient=false by security plugin
	  Useful for dumb clients which can't handle exceptions (like mobile phones)
	  API for I_MsgErrorHandler#handleErrorSync changed to return string
	  DeadMessageDumper receiverSubdir=true: Creates now subdirectory with receiver name

 o r17049 C client library: Bugfix in strcatAlloc() which used wrong SIZE for strncat0()

 o r17036 PHP Client xmlBlaster/demo/php/xmlrpc/README
          Ported to PHP 5 and phpxmlrpc 2.2.1 http://phpxmlrpc.sourceforge.net/  

 o r17028 Cluster node client:
          If cluster client sending of publish fails it is dumped and removed from connection queue

 o r17025 ClientErrorHandler: Changed default behaviour to only shutdown on internal problems
          for async message sending failures (before for all none communication errors)

 o r17010 Sessions from persistence on xmlBlaster startup go to POLLING directly
          Cluster back tunnel now finds XmlBlasterAccess again after gateway restart

 o r17004 Fixed SOCKET driver to work on AddressServer clone instead of on the
          SocketDriver#addressServer singleton instance

 o r17002 AjaxServlet: Limit with MaxUserSessions (configurable via JMX)
          Added internationalization of exceptions
          e.g. put ajaxServlet_de.properties into the classpath of war
          Fixed session cleanup for error cases
